# lambdaplatform

./: .gitignore  LICENSE  README.md  default.nix  setup.cfg
src/lambdaplatform/: deploy.py  runtime.py
src/lambdaplatform/tasks/: availability_zones.py  common.py  image_tagger.py  lambda_eip_allocator.py  lambda_function.py
src/lambdaplatform/templates/: __init__.py  availability_zones.py  common.py  deployment_id.py  elastic_file_system.py  image_tagger.py  lambda_eip_allocator.py  lambda_function.py  vpc.py
