[metadata]
name = lambdaplatform
version = 0.1

[options]
install_requires =
    troposphere
    awacs
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    lambdaplatform-deploy = lambdaplatform.deploy:main
    lambdaplatform-runtime = lambdaplatform.runtime:main
    lambdaplatform-generate-templates = lambdaplatform.templates:main
